--- a/bmi.html
+++ b/bmi.html
@@ -11,7 +11,7 @@
         
 
         body{
-            background-color: navy
+            background-color: rgb(195, 187, 212)
         }
         h2{
             font-family: 'Anton', sans-serif;
@@ -38,11 +38,11 @@
             margin-right: 5.5rem;
         }
         .box{
-            margin:150px;
+            margin:50px;
             padding: 20px;
             border: 15px solid black;
-            border-radius: 10%;
-            border-width: 2px;
+            border-radius: 0%;
+            border-width: 20px;
             background-color: lightgrey;
         }
         .submits1{
